snap from webcam and show happiness emotion value

--- a/mysite/main/templates/main/home.html
+++ b/mysite/main/templates/main/home.html
@@ -13,9 +13,8 @@
             {% if user.is_authenticated %}
                 <li><a href="http://127.0.0.1:8000">home</a></li>
                 <li><a href="http://127.0.0.1:8000/logout">Logout</a></li>
-                <li><a href="http://127.0.0.1:8000/upload">upload</a></li>
-                <li><a href="http://127.0.0.1:8000/visualise">visualise</a></li>
-                <li><a href="http://127.0.0.1:8000/fit">fit</a></li>
+                <li><a href="http://127.0.0.1:8000/capture">capture</a></li>
+                <li><a href="http://127.0.0.1:8000/detect">detect</a></li>
             {% else %}
                 <li><a href="http://127.0.0.1:8000/register">Register</a></li>
                 <li><a href="http://127.0.0.1:8000/login">Login</a></li>
