--- a/mysite/main/templates/main/results.html
+++ b/mysite/main/templates/main/results.html
@@ -1,6 +1,7 @@
 {% extends "main/home.html" %}
 
 {% block content %}
+Hello {{ name }}
 The face is detected {{ detected_faceId }}
 ____ The confidence is {{ confidence }}
   {% endblock %}
