--- a/mysite/main/templates/main/image.html
+++ b/mysite/main/templates/main/image.html
@@ -6,5 +6,9 @@
 <form action= 'process/' method ="GET">
   <button type="submit">submit image</button>
 </form> 
+
+<form action= 'details/' method ="GET">
+  <button type="submit">register image</button>
+</form> 
     {% endblock %}
     
